--- a/react_redux_acad_tasks/tasks/task1/react1/src/App.css
+++ b/react_redux_acad_tasks/tasks/task1/react1/src/App.css
@@ -1,28 +1,9 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App{
+  margin: auto;
+  width: 70%;
+  background: #eaeaea;
+  border: 2px solid grey;
+  padding: 15px;
+  margin-bottom: 10px;
+  box-shadow: 1px 3px #888888;
 }
