minor fixing in the navbar

--- a/react_udemy_academind/react_redux_acad_tasks/tasks/routing_assignment/src/components/NavBar/NavBar.css
+++ b/react_udemy_academind/react_redux_acad_tasks/tasks/routing_assignment/src/components/NavBar/NavBar.css
@@ -11,9 +11,16 @@ nav ul li{
     margin: 5px;
     cursor: pointer;
     padding: 10px;
+    
 }
 
-nav ul li:hover{
+nav a {
+    text-decoration: none;
+}
+
+nav ul li:hover,
+nav ul a.active{
     background: grey;
     color: white;
+    padding: 10px;
 }
