parsing title as a segment

--- a/react_udemy_academind/react_redux_acad_tasks/tasks/routing_assignment/src/components/NavBar/NavBar.css
+++ b/react_udemy_academind/react_redux_acad_tasks/tasks/routing_assignment/src/components/NavBar/NavBar.css
@@ -1,8 +1,9 @@
-nav{
+/* av{
     position: fixed;
     top: 0;
     width: 100%;
-}
+    padding-bottom: 200px;
+}n */
 nav ul{
     list-style: none; 
     background: blueviolet;
