--- a/React_Animations/animations--01-start/src/components/Modal/Modal.css
+++ b/React_Animations/animations--01-start/src/components/Modal/Modal.css
@@ -15,12 +15,46 @@
 
 .ModalOpen {
     /* display: block; */
-    opacity: 1;
-    transform: translateY(0);
+    /* opacity: 1;
+    transform: translateY(0); */
+    animation: openModal 0.3s ease-in-out forwards;
 }
 
 .ModalClosed {
     /* display: none; */
-    opacity: 0;
-    transform: translateY(-100vh);
+    /* opacity: 0;
+    transform: translateY(-100vh); */
+    animation: closeModal 0.3s ease-out forwards;
+}
+
+
+@keyframes openModal{
+    0%{
+        opacity: 0;
+        transform: translateY(-100vh);
+    }
+    50%{
+        opacity: 0.7;
+        transform: translateY(90vh);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+@keyframes closeModal{
+    0%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+    50%{
+        opacity: 0.8;
+        transform: translateY(60vh);
+    }
+    100%{
+        opacity: 0;
+        transform: translateY(-100vh);
+    }
 }
