--- a/React_Animations/animations--01-start/src/components/Modal/Modal.css
+++ b/React_Animations/animations--01-start/src/components/Modal/Modal.css
@@ -17,16 +17,31 @@
     /* display: block; */
     /* opacity: 1;
     transform: translateY(0); */
-    animation: openModal 0.3s ease-in-out forwards;
+    /* animation: openModal 0.3s ease-in-out forwards; */
 }
 
 .ModalClosed {
     /* display: none; */
     /* opacity: 0;
     transform: translateY(-100vh); */
-    animation: closeModal 1s ease-out forwards;
+    /* animation: closeModal 1s ease-out forwards; */
 }
 
+.fade-slide-enter{
+
+}
+
+.fade-slide-enter-active{
+    animation: openModal 0.3s ease-in-out forwards;
+}
+
+.fade-slide-exit{
+    
+}
+
+.fade-slide-exit-active{
+    animation: closeModal 1s ease-out forwards;
+}
 
 @keyframes openModal{
     0%{
